--- a/analysis/HousePriceRegressionAnalysis.Rmd
+++ b/analysis/HousePriceRegressionAnalysis.Rmd
@@ -70,7 +70,7 @@ train2.mod <- train2 %>% filter(GrLivArea < 4000)
 
 # Introduction
 
-What is the price of a home in Ames Iowa?  Our inaugural project in the program curriculum had us competing in an online competition utilizing the linear regression techniques that we’ve learned up to this point.  Our team chose R as the preferred analysis platform as the consensus was that it had more applicable uses in industry.  The objective was to apply various predictive models in order to assess the suitability of our parameter selections.  The measure of accuracy was logged in terms of the Root Mean Square Error, or RMSE, as well as other comparison models such as cross-validation and the adjusted R-squared.  Our approach was limited in that we not permitted to use more advanced algorithms that we will be exposed to later on, but the exploratory data analysis and data cleaning methods that we’ve learned and made use of here will surely be of use to us in our future personal and academic endeavors.
+What is the price of a home in Ames, Iowa?  Our inaugural project in the program curriculum had us competing in an online competition utilizing the linear regression techniques that we’ve learned up to this point.  Our team chose R as the preferred analysis platform as the consensus was that it had more applicable uses in industry.  The objective was to apply various predictive models in order to assess the suitability of our parameter selections in determining the sales price of a home.  The measure of accuracy was logged in terms of the Root Mean Square Error, or RMSE, as well as other comparison models such as cross-validation and the adjusted R-squared.  Our approach was limited in that we not permitted to use more advanced algorithms that we will be exposed to later on, but the exploratory data analysis and data cleaning methods that we’ve learned and made use of here will surely be of use to us in our future personal and academic endeavors.
 
 # Ames, Iowa Data Set
 
