--- a/analysis/exploratory_data_analysis/chance/Exploratory_Data_Analysis.Rmd
+++ b/analysis/exploratory_data_analysis/chance/Exploratory_Data_Analysis.Rmd
@@ -77,84 +77,6 @@ train %>%
   summarise(mean = mean(log(SalePrice)), n = n()) %>%
   arrange(desc(mean))
 
-# neighborhood_high <- c('NoRidge', 'NridgHt', 'StoneBr', 'Timber', 'Veenker', 'Somerst', 'ClearCr', 'Crawfor', 'Blmngtn', 'CollgCr')
-# 
-# neighborhood_medium <- c('Gilbert', 'NWAmes', 'SawyerW', 'Mitchel', 'NAmes', 'NPkVill', 'SWISU', 'Blueste', 'Sawyer', 'Edwards')
-# 
-# neighborhood_low <- c('OldTown', 'BrkSide', 'BrDale', 'MeadowV', 'IDOTRR')
-# 
-# train$Neighborhood <- case_when(train$Neighborhood %in% c('NoRidge', 'NridgHt', 'StoneBr', 'Timber', 'Veenker', 'Somerst', 'ClearCr', 'Crawfor', 'Blmngtn', 'CollgCr') ~ 'High',
-#                train$Neighborhood %in% c('Gilbert', 'NWAmes', 'SawyerW', 'Mitchel', 'NAmes', 'NPkVill', 'SWISU', 'Blueste', 'Sawyer', 'Edwards') ~ 'Medium',
-#                train$Neighborhood %in% c('OldTown', 'BrkSide', 'BrDale', 'MeadowV', 'IDOTRR') ~ 'Low')
-# 
-# 
-# test$Neighborhood <- case_when(test$Neighborhood %in% c('NoRidge', 'NridgHt', 'StoneBr', 'Timber', 'Veenker', 'Somerst', 'ClearCr', 'Crawfor', 'Blmngtn', 'CollgCr') ~ 'High',
-#                test$Neighborhood %in% c('Gilbert', 'NWAmes', 'SawyerW', 'Mitchel', 'NAmes', 'NPkVill', 'SWISU', 'Blueste', 'Sawyer', 'Edwards') ~ 'Medium',
-#                test$Neighborhood %in% c('OldTown', 'BrkSide', 'BrDale', 'MeadowV', 'IDOTRR') ~ 'Low')
-
-
-
-# modelMatrix <- model.matrix(~Neighborhood - 1, data = train)
-# modelData <- data.frame(train, modelMatrix)
-
-
-
-# class(train$Neighborhood)
-# 
-# table(train$Neighborhood)
-# 
-# levels(train$Neighborhood)
-
-
-```
-
-
-```{r MSSubClass}
-# Reduce Neighborhood into 3 categories
-# train %>% 
-#   group_by(MSSubClass) %>%
-#   summarise(mean = mean(log(SalePrice)), n = n()) %>%
-#   arrange(mean)
-# 
-# 
-# 
-# train$MSSubClass <- dplyr::recode(train$MSSubClass, `30` = 1L, `180` = 2L, `45` = 3L, `190` = 4L, `90` = 5L, `160` = 6L, `50` = 7L, `40` = 8L, `85` = 9L, `70` = 10L,
-#                                 `80` = 11L, `20` = 12L, `75` = 13L, `120` = 14L, `60` = 15L, `150` = 7L)
-# 
-# 
-# test$MSSubClass <- dplyr::recode(test$MSSubClass, `30` = 1L, `180` = 2L, `45` = 3L, `190` = 4L, `90` = 5L, `160` = 6L, `50` = 7L, `40` = 8L, `85` = 9L, `70` = 10L,
-#                                 `80` = 11L, `20` = 12L, `75` = 13L, `120` = 14L, `60` = 15L, `150` = 7L)
-# 
-# test %>% 
-#   group_by(MSSubClass) %>%
-#   summarise(n = n()) %>%
-#   arrange(n)
-# 
-# 
-# train$MSSubClass <- as.factor(train$MSSubClass)
-# levels(train$MSSubClass)
-# 
-# test$MSSubClass <- as.factor(test$MSSubClass)
-# levels(test$MSSubClass)
-
-# 
-# train %>% 
-#   group_by(MSSubClass) %>%
-#   summarise(mean = mean(log(SalePrice)), n = n()) %>%
-#   arrange(mean)
-# 
-# 
-# test$MSSubClass <- plyr::mapvalues(test$MSSubClass, from = c(30, 180, 45, 190, 90, 160, 50, 40, 85, 70, 80, 20, 75, 120, 60), 
-#                                                   to = c(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15))
-# 
-# 
-# # train$MSSubClass <- ordered(train$MSSubClass, c(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15))
-# 
-# 
-# # 
-# class(train$MSSubClass)
-
-
 
 ```
 
@@ -164,7 +86,7 @@ train %>%
 - Alley 
 - MasVnrType
 - BsmtQual 
-- BsmtCond
+- BsmtCond      (Removed)
 - BsmtExposure
 - BsmtFinType1
 - BsmtFinType2
@@ -232,17 +154,8 @@ test$Electrical[is.na(test$Electrical)] <- 'SBrkr'
 train$BsmtExposure[is.na(train$BsmtExposure)] <- 'None'
 test$BsmtExposure[is.na(test$BsmtExposure)] <- 'None'
 
-
-train$Utilities <- as.factor(train$Utilities)
-test$Utilities <- as.factor(test$Utilities)
-
-
 train$Neighborhood <- as.factor(train$Neighborhood)
 test$Neighborhood <- as.factor(test$Neighborhood)
-
-
-
-
 
 train$BldgType <- as.factor(train$BldgType)
 test$BldgType <- as.factor(test$BldgType)
@@ -296,14 +209,84 @@ train$BsmtExposure <- as.factor(train$BsmtExposure)
 test$BsmtExposure <- as.factor(test$BsmtExposure)
 
 
+# train$Utilities <- as.factor(train$Utilities)
+# test$Utilities <- as.factor(test$Utilities)
+
 ```
 
-### Set ordered factor values
+
+### set ordinal factors
+
+```{r MSSubClass}
+# Reduce Neighborhood into 3 categories
+# train %>%
+#   group_by(MSSubClass) %>%
+#   summarise(mean = mean(log(SalePrice)), n = n()) %>%
+#   arrange(mean)
+
+# Remove utilities from dataframe as it doesn't have enough observations in the 2 levels
+# Remove Basement Condition as it is highly correlated to Basement Quality
+train = subset(train, select = -c(Utilities, BsmtCond, GarageCond) )
+test = subset(test, select = -c(Utilities, BsmtCond, GarageCond) )
+
+# train$MSSubClass <- dplyr::recode(train$MSSubClass, `30` = 1L, `180` = 2L, `45` = 3L, `190` = 4L, `90` = 5L, `160` = 6L, `50` = 7L, `40` = 8L, `85` = 9L, `70` = 10L,
+#                                  `80` = 11L, `20` = 12L, `75` = 13L, `120` = 14L, `60` = 15L, `150` = 7L)
+#  
+# test$MSSubClass <- dplyr::recode(test$MSSubClass, `30` = 1L, `180` = 2L, `45` = 3L, `190` = 4L, `90` = 5L, `160` = 6L, `50` = 7L, `40` = 8L, `85` = 9L, `70` = 10L,
+#                                   `80` = 11L, `20` = 12L, `75` = 13L, `120` = 14L, `60` = 15L, `150` = 7L)
+
+
+train$MSSubClass <- dplyr::recode(train$MSSubClass, `30` = "30F", `180` = "180F", `45` = "45F", `190` = "190F",
+                                  `90` = "190F", `160` = "160F", `50` = "50F", `40` = "40F", `85` = "85F", `70` = "70F",
+                                 `80` = "80F", `20` = "20F", `75` = "75F", `120` = "120F", `60` = "60F", `150` = "75F")
+
+test$MSSubClass <- dplyr::recode(test$MSSubClass, `30` = "30F", `180` = "180F", `45` = "45F", `190` = "190F",
+                                  `90` = "190F", `160` = "160F", `50` = "50F", `40` = "40F", `85` = "85F", `70` = "70F",
+                                 `80` = "80F", `20` = "20F", `75` = "75F", `120` = "120F", `60` = "60F", `150` = "75F")
+
+
+train$MSSubClass <- as.factor(train$MSSubClass)
+test$MSSubClass <- as.factor(test$MSSubClass)
+
+
+train$BsmtQual <- dplyr::recode(train$BsmtQual, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+test$BsmtQual <- dplyr::recode(test$BsmtQual, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+
+# train$BsmtCond <- dplyr::recode(train$BsmtCond, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+# test$BsmtCond <- dplyr::recode(test$BsmtCond, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+
+
+train$GarageQual <- dplyr::recode(train$GarageQual, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+test$GarageQual <- dplyr::recode(test$GarageQual, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+
+
+# train$GarageCond <- dplyr::recode(train$GarageCond, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+# test$GarageCond <- dplyr::recode(test$GarageCond, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+
+
+train$PoolQC <- dplyr::recode(train$PoolQC, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+test$PoolQC <- dplyr::recode(test$PoolQC, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+
+
+train$FireplaceQu <- dplyr::recode(train$FireplaceQu, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+test$FireplaceQu <- dplyr::recode(test$FireplaceQu, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
+
+
+train$BsmtFinType1 <- dplyr::recode(train$BsmtFinType1, 'None' = 0, 'Unf' = 1, 'LwQ' = 2, 'Rec' = 3, 'BLQ' = 4, 'ALQ' = 5, 'GLQ' = 6)
+test$BsmtFinType1 <- dplyr::recode(test$BsmtFinType1, 'None' = 0, 'Unf' = 1, 'LwQ' = 2, 'Rec' = 3, 'BLQ' = 4, 'ALQ' = 5, 'GLQ' = 6)
+
+
+train$BsmtFinType2 <- dplyr::recode(train$BsmtFinType2, 'None' = 0, 'Unf' = 1, 'LwQ' = 2, 'Rec' = 3, 'BLQ' = 4, 'ALQ' = 5, 'GLQ' = 6)
+test$BsmtFinType2 <- dplyr::recode(test$BsmtFinType2, 'None' = 0, 'Unf' = 1, 'LwQ' = 2, 'Rec' = 3, 'BLQ' = 4, 'ALQ' = 5, 'GLQ' = 6)
+
+```
+
+
+
+
+### Set normal factor variables
 ```{r non_numeric_factors}
 
-
-# train$Neighborhood <- ordered(train$Neighborhood, levels = c("Low", "Medium", "High"))
-# test$Neighborhood <- ordered(test$Neighborhood, levels = c("Low", "Medium", "High"))
 
 train$MSZoning <- ordered(train$MSZoning, levels = c("C (all)", "RM", "RH", "RL", "FV"))
 test$MSZoning <- ordered(test$MSZoning, levels = c("C (all)", "RM", "RH", "RL", "FV"))
@@ -314,7 +297,6 @@ test$Street <- ordered(test$Street, levels = c("Grvl", "Pave"))
 train$LotShape <- ordered(train$LotShape, levels = c("Reg", "IR1", "IR2", "IR3"))
 test$LotShape <- ordered(test$LotShape, levels = c("Reg", "IR1", "IR2", "IR3"))
 
-
 train$LandContour <- ordered(train$LandContour, levels = c("Bnk", "Lvl", "Low", "HLS"))
 test$LandContour <- ordered(test$LandContour, levels = c("Bnk", "Lvl", "Low", "HLS"))
 
@@ -323,7 +305,6 @@ test$LotConfig <- ordered(test$LotConfig, levels = c("Inside", "Corner", "CulDSa
 
 train$LandSlope <- ordered(train$LandSlope, levels = c("Gtl", "Mod", "Sev"))
 test$LandSlope <- ordered(test$LandSlope, levels = c("Gtl", "Mod", "Sev"))
-
 
 train$Condition1 <- ordered(train$Condition1, levels = c("Artery", "Feedr", "RRAe", "Norm", "RRAn", "RRNe", "RRNn", "PosA", "PosN"))
 test$Condition1 <- ordered(test$Condition1, levels = c("Artery", "Feedr", "RRAe", "Norm", "RRAn", "RRNe", "RRNn", "PosA", "PosN"))
@@ -337,40 +318,15 @@ test$Alley <- ordered(test$Alley, levels = c("None", "Grvl", "Pave"))
 train$MasVnrType <- ordered(train$MasVnrType, levels = c("None", "CBlock", "BrkFace", "BrkCmn", "Stone"))
 test$MasVnrType <- ordered(test$MasVnrType, levels = c("None", "CBlock", "BrkFace", "BrkCmn", "Stone"))
 
-
-train$BsmtQual <- ordered(train$BsmtQual, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-test$BsmtQual <- ordered(test$BsmtQual, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-
-train$BsmtCond <- ordered(train$BsmtCond, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-test$BsmtCond <- ordered(test$BsmtCond, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-
 # train$BsmtExposure <- ordered(train$BsmtExposure, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
 # test$BsmtExposure <- ordered(test$BsmtExposure, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
 
-
-train$BsmtFinType1 <- ordered(train$BsmtFinType1, levels = c("None", "Unf", "LwQ", "Rec", "BLQ", "ALQ", "GLQ"))
-test$BsmtFinType1 <- ordered(test$BsmtFinType1, levels = c("None", "Unf", "LwQ", "Rec", "BLQ", "ALQ", "GLQ"))
-
-train$BsmtFinType2 <- ordered(train$BsmtFinType2, levels = c("None", "Unf", "LwQ", "Rec", "BLQ", "ALQ", "GLQ"))
-test$BsmtFinType2 <- ordered(test$BsmtFinType2, levels = c("None", "Unf", "LwQ", "Rec", "BLQ", "ALQ", "GLQ"))
-
-train$FireplaceQu <- ordered(train$FireplaceQu, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-test$FireplaceQu <- ordered(test$FireplaceQu, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
 
 train$GarageType <- ordered(train$GarageType, levels = c("None", "CarPort", "2Types", "Basment", "Detchd", "Attchd", "BuiltIn"))
 test$GarageType <- ordered(test$GarageType, levels = c("None", "CarPort", "2Types", "Basment", "Detchd", "Attchd", "BuiltIn"))
 
 train$GarageFinish <- ordered(train$GarageFinish, levels = c("None", "Unf", "RFn", "Fin"))
 test$GarageFinish <- ordered(test$GarageFinish, levels = c("None", "Unf", "RFn", "Fin"))
-
-train$GarageQual <- ordered(train$GarageQual, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-test$GarageQual <- ordered(test$GarageQual, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-
-train$GarageCond <- ordered(train$GarageCond, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-test$GarageCond <- ordered(test$GarageCond, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-
-train$PoolQC <- ordered(train$PoolQC, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
-test$PoolQC <- ordered(test$PoolQC, levels = c("None", "Po", "Fa", "TA", "Gd", "Ex"))
 
 train$Fence <- ordered(train$Fence, levels = c("None", "MnWw", "GdWo", "MnPrv", "GdPrv"))
 test$Fence <- ordered(test$Fence, levels = c("None", "MnWw", "GdWo", "MnPrv", "GdPrv"))
@@ -397,7 +353,6 @@ test$BldgType[is.na(test$BldgType)] <- '1Fam'
 ```{r}
 
 # describe(train)
-
 
 ```
 
@@ -452,15 +407,14 @@ sales.price.cor %>%
 
 model.formula <- log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
     LotArea + Street + LotConfig + LandSlope + Neighborhood + 
-    Condition1 + Condition2 + OverallQual + 
-    OverallCond + YearBuilt + YearRemodAdd + RoofStyle + RoofMatl + 
-    Foundation + BsmtQual + BsmtCond + 
-    BsmtExposure + BsmtFinSF1 + BsmtFinSF2 + BsmtUnfSF + Heating + 
-    HeatingQC + CentralAir + `1stFlrSF` + `2ndFlrSF` + LowQualFinSF + 
-    BsmtFullBath + FullBath + HalfBath + KitchenAbvGr + KitchenQual + 
-    TotRmsAbvGrd + Functional + Fireplaces + GarageCars + 
-    GarageArea + GarageQual + GarageCond + WoodDeckSF + EnclosedPorch + 
-    ScreenPorch + PoolArea + PoolQC + SaleType + 
+    Condition1 + Condition2 + OverallQual + OverallCond + YearBuilt + 
+    YearRemodAdd + RoofMatl + Exterior1st + MasVnrArea + ExterCond + 
+    Foundation + BsmtExposure + BsmtFinType1 + BsmtFinSF1 + BsmtFinSF2 + 
+    BsmtUnfSF + Heating + HeatingQC + CentralAir + `1stFlrSF` + 
+    `2ndFlrSF` + LowQualFinSF + BsmtFullBath + FullBath + HalfBath + 
+    KitchenAbvGr + KitchenQual + Functional + Fireplaces + GarageYrBlt + 
+    GarageCars + GarageArea + GarageQual + WoodDeckSF + OpenPorchSF + 
+    EnclosedPorch + `3SsnPorch` + ScreenPorch + PoolArea + SaleType + 
     SaleCondition
 
 # model.formula <- log(SalePrice) ~ MSZoning + LotFrontage + LotArea +
@@ -491,16 +445,16 @@ model.formula <- log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage +
 
 # model.formula <- log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
 #     LotArea + Street + LotConfig + LandSlope + Neighborhood + 
-#     Condition1 + Condition2 + BldgType + HouseStyle + OverallQual + 
-#     OverallCond + YearBuilt + YearRemodAdd + RoofStyle + RoofMatl + 
-#     Exterior1st + ExterCond + Foundation + BsmtQual + BsmtCond + 
-#     BsmtExposure + BsmtFinSF1 + BsmtFinSF2 + BsmtUnfSF + Heating + 
-#     HeatingQC + CentralAir + `1stFlrSF` + `2ndFlrSF` + LowQualFinSF + 
-#     BsmtFullBath + FullBath + HalfBath + KitchenAbvGr + KitchenQual + 
-#     TotRmsAbvGrd + Functional + Fireplaces + GarageYrBlt + GarageCars + 
-#     GarageArea + GarageQual + GarageCond + WoodDeckSF + EnclosedPorch + 
-#     `3SsnPorch` + ScreenPorch + PoolArea + PoolQC + SaleType + 
+#     Condition1 + Condition2 + OverallQual + OverallCond + YearBuilt + 
+#     YearRemodAdd + RoofMatl + Exterior1st + MasVnrArea + ExterCond + 
+#     Foundation + BsmtExposure + BsmtFinType1 + BsmtFinSF1 + BsmtFinSF2 + 
+#     BsmtUnfSF + Heating + HeatingQC + CentralAir + `1stFlrSF` + 
+#     `2ndFlrSF` + LowQualFinSF + BsmtFullBath + FullBath + HalfBath + 
+#     KitchenAbvGr + KitchenQual + Functional + Fireplaces + GarageYrBlt + 
+#     GarageCars + GarageArea + GarageQual + WoodDeckSF + OpenPorchSF + 
+#     EnclosedPorch + `3SsnPorch` + ScreenPorch + PoolArea + SaleType + 
 #     SaleCondition
+
 
 
 ## stepwise model ##
@@ -518,16 +472,15 @@ model.formula <- log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage +
 
 
 # Remove utilities from dataframe as it doesn't have enough observations in the 2 levels
-dat <- subset(train, select = -c(Utilities, Id) )
+# dat <- subset(train, select = -c(Utilities, Id) )
 
-# dat <- na.omit(dat)
 
 base.model <- lm(model.formula,
                data = train)
 
-fit1 <- lm(log(SalePrice) ~ ., data=dat)
+fit1 <- lm(log(SalePrice) ~ ., data=train)
 
-fit2 <- lm(log(SalePrice) ~ 1, data=dat)
+fit2 <- lm(log(SalePrice) ~ 1, data=train)
 
 # summary(fit1)
 
