--- a/analysis/exploratory_data_analysis/chance/Exploratory_Data_Analysis.Rmd
+++ b/analysis/exploratory_data_analysis/chance/Exploratory_Data_Analysis.Rmd
@@ -498,7 +498,7 @@ submit <- test %>%
 
 # head(submit)
 
-write.csv(submit, file = "./kaggle_submission.csv", row.names = FALSE)
+# write.csv(submit, file = "./kaggle_submission.csv", row.names = FALSE)
 
 summary(base.model)
 ```
